@@ -1,3 +1,4 @@
+	* fixed iterator bug in disk I/O thread
 	* fixed FIEMAP support on linux
 	* fixed strict aliasing warning on gcc
 	* fixed inconsistency when creating torrents with symlinks
